[gd_scene load_steps=10 format=3 uid="uid://6d4nnla3f1jq"]

[ext_resource type="Texture2D" uid="uid://cngxgw47eg2xs" path="res://monsters/slime/green/5.png" id="1_iwquf"]
[ext_resource type="Script" path="res://monsters/slime/slime.gd" id="1_vllyc"]
[ext_resource type="Texture2D" uid="uid://bxnbkp5ba5nlc" path="res://monsters/slime/green/1.png" id="2_kj5dd"]
[ext_resource type="Texture2D" uid="uid://tb0yuebqr0be" path="res://monsters/slime/green/2.png" id="3_ecotw"]
[ext_resource type="Texture2D" uid="uid://3seuk31xcdy2" path="res://monsters/slime/green/3.png" id="4_n2ves"]
[ext_resource type="Texture2D" uid="uid://bp5cisuuvckei" path="res://monsters/slime/green/4.png" id="5_jsy27"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1f1sg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_iwquf")
}],
"loop": true,
"name": &"airborne",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_kj5dd")
}, {
"duration": 1.0,
"texture": ExtResource("3_ecotw")
}, {
"duration": 1.0,
"texture": ExtResource("4_n2ves")
}, {
"duration": 1.0,
"texture": ExtResource("5_jsy27")
}],
"loop": true,
"name": &"floor_bounce",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_h3ri2"]
radius = 9.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aun82"]
radius = 7.0
height = 22.0

[node name="Slime" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_vllyc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1f1sg")
animation = &"airborne"

[node name="AirborneCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_h3ri2")

[node name="FloorBounceCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_aun82")
debug_color = Color(0.584314, 0.513726, 0.545098, 0.419608)

[node name="FloorBounceTimer" type="Timer" parent="."]
wait_time = 0.571
one_shot = true

[node name="DissipateTimer" type="Timer" parent="."]

[connection signal="timeout" from="FloorBounceTimer" to="." method="_on_floor_bounce_timer_timeout"]
[connection signal="timeout" from="DissipateTimer" to="." method="_on_dissipate_timer_timeout"]
